--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                                       <ul>
                                         <li>Tables as RDDs</li>
                                         <li>Writing RDDs to Cassandra</li>
-                                        <li>Spark Streaming and Cassandra</li>
                                       </ul>
                                     </li>
                                     <li>Question and Summary</li>
@@ -95,7 +94,7 @@
                                 </section>
 
 				<section>
-                                  <h2>The Problem...</h2>
+                                  <h2>The Problem, part one...</h2>
                                         <p>
                                           Approaches like MapReduce read from, and store to HDFS
                                         </p>
@@ -105,15 +104,18 @@
 				</section>
 
                                 <section>
-                                  <h2>There are existing solutions...</h2>
-                                    <p>But each tend to solve a specialized problem, and all allow "fine-grain" (cell level) updates</p>
-                                    <p>Fine-grain updates complicate fault tolerance</p> 
-                                </section>                                 
- 
+                                  <h2>The Problem, part two...</h2>
+                                        <p>
+                                          Any robust, distributed data processing framework needs fault tolerance
+                                        </p>
+                                          But existing solutions allow for "fine-grained" (cell level) updates, which can complicate the handling of faults where data needs to be rebuilt/recalculated
+                                        </p>
+                                </section>
+
 				<section>
-					<h2>Spark performs operations in-memory</h2>
-				          <p>Think of it as MapReduce where intermediate results are kept in memory</p>
-                                          <p>The key to making this work is a new data abstraction...</p>
+					<h2>Spark attempts to address these two problems</h2>
+				          <p>Solution 1: store intermediate results in memory</p>
+                                          <p>Solution 2: introduce a new expressive data abstraction</p>
                                 </section>
 
 				<section>
@@ -123,14 +125,16 @@
                                 </section>
 
 				<section>
-                                  <h2>Lineage Transformation</h2>
-                                  <img src="images/Lineage.png"></img>
+                                  <h2>Transformations and Actions</h2>
+                                  <p> A "transformation" is an operation that can be lazily-evaluated (think "map")</p>
+                                  <p> An "action" requires immediate evaluation (think "count")
 				</section>
+          
 
 				<section>
 					<h2>RDDs are Expressive</h2> 
 					<p>
-                                          It turns out that coars-grained operations cover many existing parrallel computing cases
+                                          It turns out that coarse-grained operations cover many existing parrallel computing cases
 					</p>
                                         <p>
                                           Consequently, the RDD abstraction can implement existing systems like MapReduce, Pregel, Dryad, etc.
@@ -141,6 +145,12 @@
 					<img src="images/cluster-overview.png"></img>
                                         <p><small>Spark can be run with Apache Mesos, HADOOP Yarn, or it's own standalone cluster manager</small></p>
 				</section>
+                                
+
+                                <section>
+                                  <h2>Lineage Transformations</h2>
+                                  <img src="images/Lineage.png"></img>
+                                </section>
 
 				<section>
 					<h2>Job Scheduling and Stages</h2>
@@ -149,7 +159,7 @@
 
 				<section>
 					<h2>Spark and Cassandra</h2>
-                                        <p>If we can turn Cassandra data into RDDs, and RDDs into Cassandra data, then the data can start flowing between the two systems and giving us some insight into our data.</p>
+                                        <p>If we can turn Cassandra data into RDDs, and RDDs into Cassandra data, then the data can start flowing between the two systems and give us some insight into our data.</p>
                                         <p> <a href="https://github.com/datastax/spark-cassandra-connector">The Spark Cassandra Connector</a> allows us to perform the transformation from Cassadra table to RDD and then back again!</p>
 				</section>
 
@@ -178,120 +188,25 @@ count.saveToCassandra("music", "labelcount",SomeColumns("label", "count")
 					</section>
 				</section>
 
-				<section data-transition="linear" data-background="#8c4738" data-background-transition="slide">
-					<h2>Background Transition Override</h2>
-					<p>
-						You can override background transitions per slide by using <code>data-background-transition="slide"</code>.
-					</p>
+				<section>
+					<h2>Joining Data</h2>
 				</section>
 
 				<section>
-					<h2>Clever Quotes</h2>
-					<p>
-						These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						&ldquo;The nice thing about standards is that there are so many to choose from&rdquo;</q> and block:
-					</p>
-					<blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						&ldquo;For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.&rdquo;
-					</blockquote>
+					<h2>SQL Queries with Spark SQL</h2>
 				</section>
 
-				<section>
-					<h2>Pretty Code</h2>
-					<pre><code data-trim contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) {
-        node.className += ' roll';
-      }
-    }
-  }
-}
-					</code></pre>
-					<p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-				</section>
-
-				<section>
-					<h2>Intergalactic Interconnections</h2>
-					<p>
-						You can link between slides internally,
-						<a href="#/2/3">like this</a>.
-					</p>
-				</section>
-
-				<section>
-					<section id="fragments">
-						<h2>Fragmented Views</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<ol>
-							<li class="fragment"><code>any type</code></li>
-							<li class="fragment"><em>of view</em></li>
-							<li class="fragment"><strong>fragments</strong></li>
-						</ol>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's a few styles of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment roll-in">roll-in</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-green">highlight-green</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-						<p class="fragment current-visible">current-visible</p>
-						<p class="fragment highlight-current-blue">highlight-current-blue</p>
-					</section>
-				</section>
-
-				<section>
-					<h2>Spectacular image!</h2>
-					<a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-						<img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-					</a>
-				</section>
-
-				<section>
-					<h2>Export to PDF</h2>
-					<p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-					<iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
-					<script>
-						document.getElementById('slideshare').attributeName = 'allowfullscreen';
-					</script>
-				</section>
-
-				<section>
-					<h2>Take a Moment</h2>
-					<p>
-						Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-						during a presentation.
-					</p>
-				</section>
-
-				<section>
-					<h2>Stellar Links</h2>
-					<ul>
-						<li><a href="http://slid.es">Try the online editor</a></li>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-					</ul>
+                                <section>
+                                  <h2>Questions?</h2> 
 				</section>
 
 				<section>
 					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+                                        <p>References</p>
+                                        <ul>
+                                          <li><a href="https://spark.apache.org/">Apache Spark Website</a></li>
+                                          <li><a href="https://github.com/datastax/spark-cassandra-connector">Datastax Spark Cassandra Connector</a></li>
+                                        </ul>
 				</section>
 
 			</div>
